[gd_scene load_steps=11 format=3 uid="uid://bks7tuqpqnj1d"]

[ext_resource type="Script" path="res://main.gd" id="1_dhpt4"]

[sub_resource type="CylinderMesh" id="CylinderMesh_nkygx"]
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o3bkd"]
albedo_color = Color(0.286275, 0.286275, 0.286275, 1)

[sub_resource type="BoxMesh" id="BoxMesh_0vve1"]
size = Vector3(0.053, 0.025, 0.101)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ena64"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_fs1nv"]
size = Vector3(0.05, 0.026, 0.242)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jlhf1"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_iy52x"]
size = Vector3(0.05, 0.02, 0.38)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y3ewh"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_84ubj"]
size = Vector3(0.021, 0.02, 0.38)

[node name="main" type="Node3D"]
script = ExtResource("1_dhpt4")

[node name="face" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_nkygx")

[node name="hour_1" type="MeshInstance3D" parent="face"]
transform = Transform3D(0.866025, -6.98857e-05, 0.5, -8.74228e-08, -1, -0.00013962, 0.5, 0.000120871, -0.866025, 0.2, 0.06, -0.34641)
material_override = SubResource("StandardMaterial3D_o3bkd")
mesh = SubResource("BoxMesh_0vve1")

[node name="hour_2" type="MeshInstance3D" parent="face"]
transform = Transform3D(0.5, -0.000120882, 0.866025, 3.78575e-08, -1, -0.000139604, 0.866025, 6.98348e-05, -0.5, 0.34641, 0.06, -0.2)
material_override = SubResource("StandardMaterial3D_o3bkd")
mesh = SubResource("BoxMesh_0vve1")

[node name="hour_3" type="MeshInstance3D" parent="face"]
transform = Transform3D(-4.37114e-08, -8.74228e-08, -1, 0, -1, 8.74228e-08, -1, 3.55271e-15, 4.37114e-08, 0.4, 0.06, 0)
material_override = SubResource("StandardMaterial3D_o3bkd")
mesh = SubResource("BoxMesh_0vve1")

[node name="hour_4" type="MeshInstance3D" parent="face"]
transform = Transform3D(0.502435, 0.000219312, -0.864615, -2.82145e-05, -1, -0.000270048, -0.864615, 0.000160076, -0.502435, 0.34641, 0.06, 0.2)
material_override = SubResource("StandardMaterial3D_o3bkd")
mesh = SubResource("BoxMesh_0vve1")

[node name="hour_5" type="MeshInstance3D" parent="face"]
transform = Transform3D(0.866025, -5.85622e-09, -0.5, 2.18557e-08, -1, 4.95676e-08, -0.5, -5.38547e-08, -0.866025, 0.2, 0.06, 0.34641)
material_override = SubResource("StandardMaterial3D_o3bkd")
mesh = SubResource("BoxMesh_0vve1")

[node name="hour_6" type="MeshInstance3D" parent="face"]
transform = Transform3D(1, 0, 0, 0, -1, -0.000139626, 0, 0.000139626, -1, 0, 0.06, 0.4)
material_override = SubResource("StandardMaterial3D_o3bkd")
mesh = SubResource("BoxMesh_0vve1")

[node name="hour_7" type="MeshInstance3D" parent="face"]
transform = Transform3D(0.866025, -6.97911e-05, 0.5, 2.18557e-08, -1, -0.00013962, 0.5, 0.000120925, -0.866025, -0.2, 0.06, 0.34641)
material_override = SubResource("StandardMaterial3D_o3bkd")
mesh = SubResource("BoxMesh_0vve1")

[node name="hour_8" type="MeshInstance3D" parent="face"]
transform = Transform3D(0.5, -0.000120882, 0.866025, 3.78575e-08, -1, -0.000139604, 0.866025, 6.98348e-05, -0.5, -0.34641, 0.06, 0.2)
material_override = SubResource("StandardMaterial3D_o3bkd")
mesh = SubResource("BoxMesh_0vve1")

[node name="hour_9" type="MeshInstance3D" parent="face"]
transform = Transform3D(-4.37114e-08, -8.74228e-08, -1, 2.56506e-12, -1, 8.74228e-08, -1, -2.56506e-12, 4.37114e-08, -0.4, 0.06, -2.62268e-09)
material_override = SubResource("StandardMaterial3D_o3bkd")
mesh = SubResource("BoxMesh_0vve1")

[node name="hour_10" type="MeshInstance3D" parent="face"]
transform = Transform3D(0.5, -5.38547e-08, -0.866025, 5.85622e-09, -1, 6.55671e-08, -0.866025, -3.78552e-08, -0.5, -0.34641, 0.06, -0.2)
material_override = SubResource("StandardMaterial3D_o3bkd")
mesh = SubResource("BoxMesh_0vve1")

[node name="hour_11" type="MeshInstance3D" parent="face"]
transform = Transform3D(0.866025, -5.85622e-09, -0.5, 2.18557e-08, -1, 4.95676e-08, -0.5, -5.38547e-08, -0.866025, -0.2, 0.06, -0.34641)
material_override = SubResource("StandardMaterial3D_o3bkd")
mesh = SubResource("BoxMesh_0vve1")

[node name="hour_12" type="MeshInstance3D" parent="face"]
transform = Transform3D(1, 0, 0, 0, -1, -0.000139626, 0, 0.000139626, -1, 0, 0.06, -0.4)
material_override = SubResource("StandardMaterial3D_o3bkd")
mesh = SubResource("BoxMesh_0vve1")

[node name="hour_indicator" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="hour_indicator"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0810913, 0.07)
material_override = SubResource("StandardMaterial3D_ena64")
mesh = SubResource("BoxMesh_fs1nv")
skeleton = NodePath("../../face")

[node name="minute_indicator" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="minute_indicator"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.15, 0.07)
material_override = SubResource("StandardMaterial3D_jlhf1")
mesh = SubResource("BoxMesh_iy52x")

[node name="second_indicator" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="second_indicator"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.15, 0.07)
material_override = SubResource("StandardMaterial3D_y3ewh")
mesh = SubResource("BoxMesh_84ubj")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.02698)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
